Bug 43049 - kernel reports to nm that ipw2200.ko supports nl80211 but doesn't report any encryption capabilities.
Summary: kernel reports to nm that ipw2200.ko supports nl80211 but doesn't report any ...
Status: RESOLVED CODE_FIX
Alias: None
Product: Networking
Classification: Unclassified
Component: Wireless (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Stanislav Yakovlev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-05 12:26 UTC by Omar Siam
Modified: 2012-08-15 21:58 UTC (History)
5 users (show)

See Also:
Kernel Version: v3.2.14
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Omar Siam 2012-04-05 12:26:19 UTC
It seems that ipw2200 some sort of automatically supports nl80211 but it doesn't report any encryption capabilities back to userspace or at least not in a way network-manager understands (see nm's src/wifi/wifi-utils-nl80211.c)
I reported this bug to ubuntu developers. They asked me to file this here.
https://bugs.launchpad.net/ubuntu/+source/network-manager/+bug/971628
https://bugs.launchpad.net/ubuntu/+source/linux/+bug/973241
Comment 1 Omar Siam 2012-04-07 19:03:12 UTC
This bug does exist in a kernel compiled from linux-stable.git using tag v3.2.14.
Comment 2 Stanislav Yakovlev 2012-04-11 01:35:07 UTC
Assigning to myself.
Comment 3 Omar Siam 2012-04-11 20:50:58 UTC
The posted patch fixes the problem I reported, but if that's fixed nm still doesn't show the signal strength of the connected network I guess (because once created using some patch nm can connect to this network but doesn't show any signal strength). I'll file another bug if I really run across that problem. Not a show stopper anymore but not working either. As was said: probably will not work
through nl80211.
Comment 4 Florian Mickler 2012-07-01 09:48:45 UTC
A patch referencing this bug report has been merged in Linux v3.5-rc1:

commit a141e6a0097118bb35024485f1faffc0d9042f5c
Author: Stanislav Yakovlev <stas.yakovlev@gmail.com>
Date:   Tue Apr 10 21:44:47 2012 -0400

    net/wireless: ipw2x00: add supported cipher suites to wiphy initialization

Note You need to log in before you can comment on or make changes to this bug.